Fix mobile spacing for tournament tabs

--- a/css/mz-turnaje.css
+++ b/css/mz-turnaje.css
@@ -1022,7 +1022,7 @@
     position: static;
     position: relative;
     width: calc(100% - 32px);
-    margin: 4px auto 28px;
+    margin: 4px auto 42px;
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -1073,7 +1073,7 @@
   }
 
   .turnaje-wow {
-    padding-top: 0;
+    padding-top: 10px;
   }
 
   .turnaje-schedule,
